--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /CourseLibrary/.vs/CourseLibrary/v16
+/CourseLibrary/CourseLibrary.API/obj
