Add Microsoft.EntityFrameworkCore, Microsoft.EntityFrameworkCore.Design, Microsoft.EntityFrameworkCore.SqlServer, Microsoft.EntityFrameworkCore.Tools

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /CourseLibrary/.vs/CourseLibrary/v16
 /CourseLibrary/CourseLibrary.API/obj
+/CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1/runtimes
+/CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1
