Change the project to use http://localhost:51044

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /CourseLibrary/CourseLibrary.API/obj
 /CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1/runtimes
 /CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1
+/CourseLibrary/.vs/CourseLibrary/config
