--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1/runtimes
 /CourseLibrary/CourseLibrary.API/bin/Debug/netcoreapp3.1
 /CourseLibrary/.vs/CourseLibrary/config
+/CourseLibrary/.vs/CourseLibrary/DesignTimeBuild
